Update StreetCodeTextBlockComponent